[package]
name = "quickjs_runtime_demo1"
version = "0.1.0"
edition = "2021"

[dependencies]
hirofa_utils = { git="https://github.com/HiRoFa/utils" }
quickjs_runtime = { git = "https://github.com/Clownsw/quickjs_es_runtime.git" }
log = "0.4"
simple-logging = "2.0"
futures = "0.3.21"

[profile.release]
lto = true
strip = true
debug = false
opt-level = 3